# csvParser

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  csvParser.c  csvParser.cpp  csvParser.h  csvTest.c  csvTest.cpp
.github/workflows/: c-cpp.yml  codeql.yml  super-linter.yml
tests/: empty_cells.csv  hugeFile.csv  makeHugeCsv.sh  malformed_unclosed_quote.csv  multiline_quoted.csv  no_final_newline.csv  quoted_commas.csv  testAll.sh  trailing_empty_cells.csv  x
